[package]
name = "exonum-bench"
version = "0.1.0"
authors = ["sigma67 <benedikt.putz@wiwi.uni-regensburg.de>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
exonum = { version = "0.11.0", path = "../../../exonum" }
exonum-crypto = { version = "0.11.0", path = "../../../components/crypto" }
exonum-derive = { version = "0.11.0", path = "../../../components/derive" }
exonum-merkledb = { version = "0.11.0", path = "../../../components/merkledb" }
exonum-configuration = { version = "0.11.0", path = "../../../services/configuration" }
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
failure = "0.1.5"
protobuf = "2.6.0"
reqwest = "0.9.14"
tokio = "0.1.18"
futures = "0.1.26"
rand = "0.6"

[build-dependencies]
exonum-build = { version = "0.11.0", path = "../../../components/build" }

[features]
default = ["with-serde"]
with-serde = []
